# ai_cs_chatBot

./: pyproject.toml  requirements.txt
python_code/: .env_example  build_vector_database.ipynb  firebase_uploader.ipynb  prompt_engineering_tutorial.ipynb  recommendation_engine_training.ipynb  rules_basket.pkl
python_code/api/: .env_example  Dockerfile  agent_controller.py  development_code.py  main.py
python_code/api/agents/: agent_protocol.py  classification_agent.py  details_agent.py  guard_agent.py  order_taking_agent.py  recommendation_agent.py  utils.py
python_code/api/configs/: __init__.py  common_configs.py  configs.yml
python_code/api/other_objects/: menu_items.csv
python_code/api/routers/: __init__.py  desc.py  order_taking.py
python_code/api/schemas/: __init__.py  desc.py  order_taking.py
python_code/api/tests/: test_client.py
